# fitting-factory

./: CMakeLists.txt  README.md  test_fit.py
fit/: CMakeLists.txt  fit_amoeba_solver.cpp  fit_amoeba_solver.h  fit_exponential.cxx  fit_exponential.h  fit_exponential_init.h  fit_factory.cpp  fit_factory.h  fit_function.cpp  fit_function.h  fit_gauss.cxx  fit_gauss.h  fit_gauss_init.cxx  fit_gauss_init.h  fit_gradient_descent.cxx  fit_gradient_descent.h  fit_least_squares_function.h  fit_least_squares_init_function.h  fit_levenberg_marquardt.h  fit_linear_solver.h  fit_lm_solver.cpp  fit_lm_solver.h  fit_non_linear_solver.h  fit_polynomial.cxx  fit_polynomial.h  fit_polynomial_init.h  fit_radial_basis_function.cxx  fit_radial_basis_function.h  fit_radial_basis_function_init.h  fit_solver.h  fit_svd_solver.cpp  fit_svd_solver.h  python_functions.cxx
fit/tests/: CMakeLists.txt  test_all.cxx  test_amoeba.cxx  test_driver.cxx  test_exp.cxx  test_gauss_lm.cxx  test_poly.cxx  test_poly_svd.cxx  test_rbf.cxx
